examples/negative/diagnostic_quality/caret_arith_operator.kai
# Diagnostic quality (#520 / category 7): the caret on a
# binary arithmetic mismatch must point at the offending
# right operand, not at the operator or left operand. The
# notes must name `expected` and `found` types.

fn main() : Int = {
  let x = 1 + "two"
  x
}
