examples/negative/diagnostic_quality/caret_arith_operator.diag.expected
error: type mismatch in arithmetic operator
caret_arith_operator.kai:7
  let x = 1 + "two"
expected: Int
found:    String
